--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,14 @@
-duckdb
-pandas
-dbt-duckdb
+# Core dependencies
+duckdb==1.1.3
+requests>=2.31.0
+pandas>=2.0.0
+
+# Plotting and visualization
+matplotlib>=3.7.0
+
+# Parquet 
+pyarrow>=14.0.1   # preferred backend
+
+# Utilities
+python-dateutil>=2.8.2  
+tqdm>=4.66.1            
