--- a/dbt/profiles.yml
+++ b/dbt/profiles.yml
@@ -3,8 +3,6 @@ taxi_co2:
   outputs:
     dev:
       type: duckdb
-      path: ''
+      path: '../data/nyc_taxi.duckdb'   # go up one level into data/
       schema: main
       threads: 4
-      keepalives_idle: 0
-      search_path: main
